jac2020/eclipse-workspace/jac2017/bin/ehrm/ExamManagementDiagrams.err
C:\ArchitectsCompanion\jac2017\classes\ehrm\ExamManagementDiagrams.java:42: error: package net.sourceforge.plantuml does not exist
import  net.sourceforge.plantuml.SourceStringReader;
                                ^
1 error
